// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare_class_unsupported.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare class C { [[foo]]: mixed }

=====================================output=====================================
declare class C {
  [[foo]]: mixed;
}

================================================================================
`;

exports[`interface_unsupported.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
interface I { [[foo]]: mixed }

=====================================output=====================================
interface I {
  [[foo]]: mixed;
}

================================================================================
`;

exports[`object_unsupported.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type T = { [[foo]]: mixed }

=====================================output=====================================
type T = { [[foo]]: mixed };

================================================================================
`;
